Install xrosfs from pypi
XrosFS v0.1.0 was registered to pypi.

--- a/0.1.0/stretch-slim/xros-over-sshfs/Dockerfile
+++ b/0.1.0/stretch-slim/xros-over-sshfs/Dockerfile
@@ -28,7 +28,7 @@ RUN apt-get update && apt-get upgrade -y \
                 supervisor
 
 # Install xrosfs and xros_over tools.
-RUN pip install --extra-index-url https://testpypi.python.org/pypi xrosfs
+RUN pip install xrosfs
 RUN pip install -e "git+https://github.com/hankei6km/xrosfs.git@master#egg=pkg&subdirectory=extra/xros_over"
 
 # Cleanup
